# vn1-forecasting-challenge

./: .gitignore  README.md  config-quick-test.yaml  config.yaml  pyproject.toml  run_folder_config.sh
configs/1_hparams_search/: 000_config.yaml  001_config.yaml  002_config.yaml  003_config.yaml  004_config.yaml  005_config.yaml  006_config.yaml  007_config.yaml  008_config.yaml  009_config.yaml  010_config.yaml  011_config.yaml  012_config.yaml  013_config.yaml  014_config.yaml  015_config.yaml  016_config.yaml  017_config.yaml  018_config.yaml  019_config.yaml  020_config.yaml  021_config.yaml  022_config.yaml  023_config.yaml  024_config.yaml  025_config.yaml  026_config.yaml  027_config.yaml  028_config.yaml  029_config.yaml  030_config.yaml  031_config.yaml  032_config.yaml  033_config.yaml  034_config.yaml  035_config.yaml  036_config.yaml  037_config.yaml  038_config.yaml  039_config.yaml  (+60 more)
configs/2_data_selection/: 001_020_config.yaml  002_020_config.yaml  003_020_config.yaml  004_020_config.yaml  005_020_config.yaml  006_020_config.yaml  007_020_config.yaml  008_020_config.yaml  (+1 more)
notebooks/: 1_config_generator_hparam_search.ipynb  2_config_generator_feature_variations.ipynb  3_config_generator_hparam_search.ipynb  4_config_generator_hparam_search.ipynb  debug.ipynb  evaluate_on_phase_1.ipynb  explore_data.ipynb  helpers.py  notebook-submission.ipynb  test_naive.ipynb  tune_magic_multiplier.ipynb
scripts/: run_phase_1.py  run_phase_2.py  run_phase_2_ensemble.py
vn1/: config.py  data_loading.py  forecaster.py  preprocessing.py  score.py  submission.py
(+95 files in other folders)
