[project]
name = "vn1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.3",
    "ruff>=0.6.8",
    "lightgbm>=4.5.0",
    "plotly>=5.24.1",
    "jupyter>=1.1.1",
    "scikit-learn>=1.5.2",
    "pydantic>=2.9.2",
    "nbconvert>=7.16.4",
    "nbstripout>=0.7.1",
    "invoke>=2.2.0",
    "fire>=0.6.0",
    "mlflow>=2.16.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
